# titletrace

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
eval/: eval.py  golden_dataset.json
src/titletrace/: graph.py  state.py
src/titletrace/api/: main.py  routes.py
src/titletrace/clients/: _base.py  attom.py  fema.py  opa.py
src/titletrace/nodes/: fetch_parcel.py  parse_address.py  synthesize_report.py
tests/: conftest.py  test_graph.py  test_state.py
tests/clients/: test_attom.py  test_fema.py  test_opa.py
tests/nodes/: test_fetch_parcel.py  test_parse_address.py
